Fixed javascript path in index.html

--- a/src/main/webapp/app/index.html
+++ b/src/main/webapp/app/index.html
@@ -34,6 +34,6 @@
     <p>Recette de la quiche lorraine</p>
   </div>
 
-  <script type="text/javascript" src="mysmartfridge.js"></script>
+  <script type="text/javascript" src="js/mysmartfridge.js"></script>
 </body>
 </html>
