--- a/src/main/webapp/app/index.html
+++ b/src/main/webapp/app/index.html
@@ -30,7 +30,7 @@
     </nav>
 
 	<div class="container" role="main">
-		<div class="page-header"><h1>Quiche Lorraine</h1></div>
+		<div class="page-header"><h1>Quiche Lorraine 2</h1></div>
     <p>Recette de la quiche lorraine</p>
   </div>
 
