--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,39 +1,73 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-	<title>My Smart Fridge</title>
 
-  <!--<link rel="stylesheet" href="css/bootstrap.css" />-->
-	<link rel="stylesheet" href="css/mysmartfridge.css" />
+<head>
+
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <title>My Smart Fridge</title>
+
+		<link href="css/mysmartfridge.css" rel="stylesheet" />
+
+    <link href="css/random_recipe.css" rel="stylesheet" />
 
 </head>
-<body>
-	<nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">ab0's Webcompiler</a>
+
+<body ng-app="mySmartFridge">
+
+		<header id="main-header">
+			<h1>My Smart Fridge</h1>
+			<p class="subtitle">Your Personal Assistant in the Kitchen</div>
+		</header>
+
+
+    <!-- Navigation -->
+    <nav class="navbar navbar-default" role="navigation">
+        <div class="container">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <!-- navbar-brand is hidden on larger screens, but visible when the menu is collapsed -->
+                <a class="navbar-brand" href="index.html">My Smart Fridge</a>
+            </div>
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav">
+                    <li>
+                        <a href="#random-recipe">Random Recipe</a>
+                    </li>
+                    <li>
+                        <a href="#about">About</a>
+                    </li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
         </div>
-        <div id="navbar" class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Une Recette au Hasard</a></li>
-            <li><a href="#about">A propos</a></li>
-            <li><a href="#contact">Contact</a></li>
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div>
+        <!-- /.container -->
     </nav>
 
-	<div class="container" role="main">
-		<div class="page-header"><h1>Quiche Lorraine 2</h1></div>
-    <p>Recette de la quiche lorraine</p>
-  </div>
+    <div ng-view></div>
 
-  <script type="text/javascript" src="js/mysmartfridge.dist.js"></script>
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <p>Copyright &copy; My Smart Fridge 2016</p>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+		<!-- javascript -->
+    <script src="js/mysmartfridge.dist.js"></script>
+
 </body>
+
 </html>
