Implemented complete form to create a recipe

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -15,7 +15,7 @@
 
 </head>
 
-<body ng-app="mySmartFridge">
+<body data-ng-app="mySmartFridge" data-ng-cloak>
 
 		<header id="main-header">
 			<h1>My Smart Fridge</h1>
